Fix Conpherence durable scrollbar with no USB devices
Summary:
Ref T7014.

When no devices are connected, we don't meaningfully activate `JX.Scrollbar` (by design), but there was no fallback overflow CSS.

Also massage a couple of other CSS things to get sliiightly less broken behavior.

Test Plan:
  - Disconnected USB devices; scrolled.
  - Connected USB devices; scrolled.

Reviewers: btrahan, chad

Reviewed By: chad

Subscribers: epriestley

Maniphest Tasks: T7014

Differential Revision: https://secure.phabricator.com/D12008

--- a/webroot/rsrc/css/application/conpherence/durable-column.css
+++ b/webroot/rsrc/css/application/conpherence/durable-column.css
@@ -70,20 +70,28 @@
 .conpherence-durable-column-main {
   position: absolute;
   top: 44px;
-  bottom: 144px;
+  bottom: 136px;
   left: 0;
   right: 0;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .conpherence-durable-column-transactions {
-  padding: 8px 12px;
+  padding: 8px 12px 0;
 }
 
 .conpherence-durable-column-transactions .phabricator-transaction-view {
   background: none;
   margin: 0 10px 0 0;
-  padding: 0;
+  padding: 4px 0;
+  min-height: 0;
+}
+
+.conpherence-durable-column-transactions
+  .phabricator-transaction-view
+  .conpherence-message {
+  word-wrap: break-word;
 }
 
 .conpherence-durable-column-transactions .phabricator-transaction-detail {
